--- a/layouts/partials/summary.html
+++ b/layouts/partials/summary.html
@@ -21,7 +21,7 @@
 			</a>
 		</p>
 
-		<p class="meta subtitle is-6 mb-5">
+		<p class="meta subtitle is-6">
 			{{ with .Date }}
 			Published
 			<time class="dt-published" datetime="{{ .Format "2006-01-02T15:04:05Z07:00" }}">{{ .Format "Jan 2, 2006" }}</time>
@@ -33,7 +33,7 @@
 			{{ end }}
 		</p>
 
-		<div class="content p-summary">
+		<div class="content p-summary my-5">
 			{{ .Summary }}
 		</div>
 
