--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -44,8 +44,12 @@ nav.navbar {
   }
 }
 
-.page-header {
-  .tag {
+.tag {
+  &:not(body) {
+    &.is-darker { background: var(--bg-lightest); }
+    &.category { background: var(--text-darkest); }
+  }
+  .page-header & {
     margin-bottom: 0.7rem;
     height: 1.6em;
     padding: 0 0.5rem;
@@ -86,6 +90,16 @@ nav.navbar {
     }
   }
   video { display: block; }
+}
+
+.summary-article {
+  margin-bottom: 3rem;
+  .image {
+    width: 15rem;
+  }
+  .meta {
+    color: var(--text-darker);
+  }
 }
 
 .content-footer {
@@ -133,6 +147,20 @@ article {
     }
   }
 
+  // Category/tag list
+  .taxonomy-list {
+    a.item {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      color: var(--text-muted);
+      &:hover, &:focus {
+        color: var(--text);
+        .tag { background: var(--text-darkest); }
+      }
+    }
+  }
+
 } // .sidebar
 
 
@@ -160,6 +188,16 @@ footer.footer.is-dark {
   @include gradient(#0C1010,#101414);
   padding: 5rem 1.5rem 8rem;
   box-shadow: 0 -1px var(--hr);
+  .logotype {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: 0.4rem;
+    .site-name { color: var(--text); }
+    .green.dot { color: var(--primary); }
+    .domain { color: var(--text-muted); }
+    .version { font-size: 0.75rem; color: var(--text-darker); }
+  }
   .title {
     text-transform: uppercase;
     font-size: 0.85rem;
@@ -195,3 +233,13 @@ footer.footer.is-dark {
 }
 
 
+// Icon for external links
+.new-window {
+  svg {
+    height: 10px;
+    width: auto;
+  }
+  .button & {
+    margin-left: 4px;
+  }
+}
