Ecosystem: list + add "submit new" buttons

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -93,6 +93,11 @@
 				<p>
 					<a href="/about" class="button is-dark">Learn more</a>
 				</p>
+				<h3 class="title is-6">Submit new&hellip;</h3>
+				<p class="buttons">
+					<a target="_blank" rel="noopener" href="https://github.com/particl-page/particl.page/issues/new?assignees=xe-nonymous&labels=enhancement&template=articles--submit-a-new-article.md&title=%5BNew+article%5D+" class="button is-dark">Article {{ partial "new-window-icon.html" . }}</a>
+					<a target="_blank" rel="noopener" href="https://github.com/particl-page/particl.page/issues/new?assignees=xe-nonymous&labels=enhancement&template=ecosystem--submit-a-new-project.md&title=%5BNew+project%5D+" class="button is-dark">Project {{ partial "new-window-icon.html" . }}</a>
+				</p>
 			</div>
 		</section>
 
