--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -64,6 +64,21 @@
 			</div>
 		</aside>
 
+		<aside class="submit block content">
+			<h3 class="title is-5">Submit an article</h3>
+
+			<div class="card">
+				<div class="card-content">
+					<p>
+						Would you like to contribute your own Particl-themed article?
+					</p>
+					<p class="buttons">
+						<a target="_blank" rel="noopener" href="https://github.com/particl-page/particl.page/issues/new?assignees=xe-nonymous&labels=enhancement&template=articles--submit-a-new-article.md&title=%5BNew+article%5D+" class="button is-primary is-outlined">Submit a new article {{ partial "new-window-icon.html" . }}</a>
+					</p>
+				</div>
+			</div>
+		</aside>
+
 	</div>
 </div>
 {{ end }}
