--- a/layouts/ecosystem/single.html
+++ b/layouts/ecosystem/single.html
@@ -42,27 +42,27 @@
 
 		<dl class="icon-list project-info">
 
-			{{ if .Params.project.cat }}
+			{{ if .Params.projects }}
 			<dt>
 				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
 					<path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd" />
 				</svg>
 				Project type
 			</dt>
-			<dd>{{ .Params.project.cat }}</dd>
+			<dd>{{ .Params.projects }}</dd>
 			{{ end }}
 
-			{{ if .Params.project.url }}
+			{{ if .Params.info.url }}
 			<dt>
 				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
 					<path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM4.332 8.027a6.012 6.012 0 011.912-2.706C6.512 5.73 6.974 6 7.5 6A1.5 1.5 0 019 7.5V8a2 2 0 004 0 2 2 0 011.523-1.943A5.977 5.977 0 0116 10c0 .34-.028.675-.083 1H15a2 2 0 00-2 2v2.197A5.973 5.973 0 0110 16v-2a2 2 0 00-2-2 2 2 0 01-2-2 2 2 0 00-1.668-1.973z" clip-rule="evenodd" />
 				</svg>
 				Project homepage
 			</dt>
-			<dd><a href="{{ .Params.project.url }}" rel="noopener" target="_blank">{{ .Params.project.url }}</a></dd>
+			<dd><a href="{{ .Params.info.url }}" rel="noopener" target="_blank">{{ .Params.info.url }}</a></dd>
 			{{ end }}
 
-			{{ if .Params.project.repo }}
+			{{ if .Params.info.repo }}
 			<dt>
 				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
 					<path d="M4 3a2 2 0 100 4h12a2 2 0 100-4H4z" />
@@ -70,27 +70,27 @@
 				</svg>
 				Git repository
 			</dt>
-			<dd><a href="{{ .Params.project.repo }}" rel="noopener" target="_blank">{{ .Params.project.repo }}</a></dd>
+			<dd><a href="{{ .Params.info.repo }}" rel="noopener" target="_blank">{{ .Params.info.repo }}</a></dd>
 			{{ end }}
 
-			{{ if .Params.project.author }}
+			{{ if .Params.info.author }}
 			<dt>
 				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
 					<path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd" />
 				</svg>
 				Author(s)
 			</dt>
-			<dd>{{ .Params.project.author }}</dd>
+			<dd>{{ .Params.info.author }}</dd>
 			{{ end }}
 
-			{{ if .Params.project.development }}
+			{{ if .Params.info.development }}
 			<dt>
 				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
 					<path fill-rule="evenodd" d="M12.316 3.051a1 1 0 01.633 1.265l-4 12a1 1 0 11-1.898-.632l4-12a1 1 0 011.265-.633zM5.707 6.293a1 1 0 010 1.414L3.414 10l2.293 2.293a1 1 0 11-1.414 1.414l-3-3a1 1 0 010-1.414l3-3a1 1 0 011.414 0zm8.586 0a1 1 0 011.414 0l3 3a1 1 0 010 1.414l-3 3a1 1 0 11-1.414-1.414L16.586 10l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
 				</svg>
 				Development
 			</dt>
-			<dd>{{ .Params.project.development }}</dd>
+			<dd>{{ .Params.info.development }}</dd>
 			{{ end }}
 
 		</dl><!-- .project-info -->
