--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,12 @@ html {
   background: var(--bg);
 }
 
+figure {
+  img { border-radius: 4px; }
+}
+
+video { border-radius: 4px; }
+
 .button {
   &.is-dark {
     background: var(--bg-lightest);
