--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -46,7 +46,7 @@
 		</aside>
 		
 		<aside class="taxonomy-list block">
-			<h3 class="title is-5">Browse topics</h3>
+			<h3 class="title is-5">Browse tags</h3>
 
 			<div class="card">
 				<div class="card-content">
