missing post images added

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -88,7 +88,7 @@
 
 			<div class="media-content">
 				<p class="title is-4 p-name">{{ .name }}</p>
-				{{ with .twitter_username }}<p class="subtitle is-6"><a class="u-url" href="https://twitter.com/{{ . }}">@{{ . }}</a></p>{{ end }}
+				{{ with .twitter_username }}<p class="subtitle is-6"><a class="u-url" target="_blank" rel="noopener" href="https://twitter.com/{{ . }}">@{{ . }}</a></p>{{ end }}
 			</div>
 
 			{{ end }}
