move all data from authors.yaml to taxonomy

--- a/layouts/ecosystem/list.html
+++ b/layouts/ecosystem/list.html
@@ -26,7 +26,7 @@
 <div class="side column is-3">
 	<div class="sidebar">
 
-		<aside class="taxonomy-list block">
+		<!--aside class="taxonomy-list block">
 			<h3 class="title is-5">Project type</h3>
 
 			<div class="card">
@@ -43,7 +43,7 @@
 					</ul>
 				</div>
 			</div>
-		</aside>
+		</aside-->
 
 		<aside class="submit block content">
 			<h3 class="title is-5">Submit a project</h3>
