--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -64,6 +64,28 @@
 			</div>
 		</aside>
 
+
+		<aside class="taxonomy-list block">
+			<h3 class="title is-5">By Authors</h3>
+
+			<div class="card">
+				<div class="card-content">
+					<ul>
+						{{ range .Site.Taxonomies.authors }}
+						<li>
+							<a href="{{ .Page.Permalink }}" class="item">
+								<span class="name">{{ .Page.Title }}</span>
+								<span class="tag is-darker">{{ .Count }}</span>
+							</a>
+						</li>
+						{{ end }}
+					</ul>
+				</div>
+			</div>
+		</aside>
+
+
+
 		<aside class="submit block content">
 			<h3 class="title is-5">Submit an article</h3>
 
