--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -77,45 +77,27 @@
 
 		<div class="media mb-6">
 
-			{{ $data := index .Site.Data .Site.Language.Lang }}
-			{{ range where $data.authors "name" "==" .Params.Author }}
+			{{ range .Params.authors }}
+				{{ with $.Site.GetPage "taxonomyTerm" (printf "authors/%s" (urlize .)) }}
 
-			<div class="media-left">
-				<figure class="image is-48x48">
-					<img src="{{ .photo }}" class="u-photo" alt="{{ .name }}">
-				</figure>
-			</div>
+				<div class="media-left">
+					<figure class="image is-48x48">
+						<img src="{{ .Params.photo }}" class="u-photo" alt="{{ .Params.title }}">
+					</figure>
+				</div>
 
-			<div class="media-content">
-				<p class="title is-4 p-name">{{ .name }}</p>
-				{{ with .twitter_username }}<p class="subtitle is-6"><a class="u-url" target="_blank" rel="noopener" href="https://twitter.com/{{ . }}">@{{ . }}</a></p>{{ end }}
-			</div>
-
+				<div class="media-content">
+					<p class="title is-4 p-name">{{ .Params.title }}</p>
+					{{ with .Params.twitter_username }}<p class="subtitle is-6"><a class="u-url" target="_blank" rel="noopener" href="https://twitter.com/{{ . }}">@{{ . }}</a></p>{{ end }}
+				</div>
+				
+				{{ end }}
 			{{ end }}
 
 		</div><!-- .media -->
 
 		<div class="card meta mb-6">
 			<div class="card-content">
-				<!--div class="media">
-
-					{{ $data := index .Site.Data .Site.Language.Lang }}
-					{{ range where $data.authors "name" "==" .Params.Author }}
-
-					<div class="media-left">
-						<figure class="image is-48x48">
-							<img src="{{ .photo }}" class="u-photo" alt="{{ .name }}">
-						</figure>
-					</div>
-
-					<div class="media-content">
-						<p class="title is-4 p-name">{{ .name }}</p>
-						{{ with .twitter_username }}<p class="subtitle is-6"><a class="u-url" href="https://twitter.com/{{ . }}">@{{ . }}</a></p>{{ end }}
-					</div>
-
-					{{ end }}
-
-				</div><!-- .media -->
 
 				<dl class="icon-list">
 
