fix mobile layout for article list

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -43,7 +43,7 @@
 
 		<section class="columns is-mobile is-multiline">
 			{{ range first 6 $projects }}
-			<div class="column is-6-mobile is-4-tablet">
+			<div class="column is-6-mobile is-6-tablet is-4-desktop">
 				{{- partial "summary-ecosystem.html" . -}}
 			</div>
 			{{ end }}
